--- a/css/piano.css
+++ b/css/piano.css
@@ -7,20 +7,20 @@ position:absolute; left: 0; top: 0; width:100%;
 }
 #Pantalla
 {
-float:left; width:100%; height:25%; background:#FAC;	
+float:left; width:100%; height:25%; background:#039;	
 }
 
 #Teclado
 {
-float:left; width:100%; height:70%; background:#F00;	
+float:left; width:100%; height:70%; background:#00FFFF;	
 }
 .nota
 {
-float:left; height:90%; position:relative; outline:#F00 solid 1px; width:14.28571428571429%; background:#C9C9C9
+float:left; height:90%; position:relative; outline:#2E5894 solid 1px; width:14.28571428571429%; background:#0093AF
 }
 .tecnote
 {
-position:relative; top: 80%; text-align:center; font-size: 2em; font-weight: bold; font-family:Tahoma, Geneva, sans-serif;
+position:relative; top: 80%; text-align:center; font-size: 2em; font-weight: bold; font-family:Tahoma, Geneva, sans-serif; background:#1083AF
 }
 .tocada
 {
